--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-  <div></div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt rem maxime illum, excepturi quibusdam tempore eligendi nesciunt deleniti esse et dolores quidem fugiat labore, cum velit exercitationem. Necessitatibus, minus, ullam.</p>
 
 </body>
 </html>
